--- a/MatrixFactorization_Spark.ipynb
+++ b/MatrixFactorization_Spark.ipynb
@@ -20,18 +20,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !pip install pyspark"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "OFl1llU9qU2V"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#!pip install pyspark"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "XKWdJkoXqC3s"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "kez9K5fxqC3s"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "NMGDP5T0qC3s"
       },
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "y-lR2zwFqC3t"
       },
@@ -103,18 +103,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0yz6ZRXlqC3t",
-        "outputId": "90a8eeac-aab4-45fb-e676-6e6b2063b7a0"
+        "outputId": "34158ec9-1d54-40cb-f5c7-e8b203229b7b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+------+-------+------+\n",
             "|userId|movieId|rating|\n",
@@ -150,18 +150,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-yrKdyNpqC3u",
-        "outputId": "8825223a-fc1a-4484-9183-03d2457f057d"
+        "outputId": "e59202aa-cbc2-4d1b-b593-cc7612058086"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- userId: integer (nullable = true)\n",
@@ -177,18 +177,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wm__5ERzqC3u",
-        "outputId": "e1c7186b-556b-43a3-9a0d-42511446f221"
+        "outputId": "a4db3b3c-bcb8-4764-9582-866821f01cba"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "number of rows : 5399624, number of columns :3\n"
           ]
@@ -200,14 +200,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "4vCzfj60qC3v"
       },
       "outputs": [],
       "source": [
         "# split into train and test\n",
-        "train, test = df.randomSplit([0.8, 0.2])"
+        "train, test = df.randomSplit([0.9, 0.1])"
       ]
     },
     {
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "hblDH8XxqC3v"
       },
@@ -246,20 +246,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Rt4S3NWqC3v",
-        "outputId": "f9c03978-526d-4665-e16b-32bff78ff2cf"
+        "outputId": "81ea5e67-235c-4980-e782-789a3ba9f501"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "***** train rmse: 0.6785713514938934 *****\n"
+            "***** train rmse: 0.6802168283962867 *****\n"
           ]
         }
       ],
@@ -277,20 +277,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KYFjudBUqC3v",
-        "outputId": "083b9a5c-7ba3-4872-8d76-9d48bf47e468"
+        "outputId": "1e9e9e18-4ec0-4814-eb9d-3578b9ae0275"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "***** test rmse: 0.8945413401724094 *****\n"
+            "***** test rmse: 0.873094632538312 *****\n"
           ]
         }
       ],
@@ -312,13 +312,79 @@
         "id": "Fg9ciNoyqC3w"
       },
       "source": [
-        "We remember that the RMSE obtained for our Keras matrix factorization model on the test set was 0.8723, which is on pair with the current one."
+        "We remember that the RMSE obtained for our Keras matrix factorization model on the test set was 0.8723, which is on pair with the current prediction."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "XKV9tUupqC3w"
+      },
+      "source": [
+        "----"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ir6DTjDYLCVK"
+      },
+      "source": [
+        "## We can use our model to recommend products to users!\n",
+        "\n",
+        "Let us try recommend movies to a set of users."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Tnhs79jYEKF"
+      },
+      "source": [
+        "The method `.recommendProducts()` recommends the top “num” number of products for a given user and returns a list of Rating objects sorted by the predicted rating in descending order."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UhbKixeyLZUA",
+        "outputId": "07214522-6ece-4cc0-b3cf-9998136dcaee"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[Rating(user=126443, product=106, rating=4.300946771647378),\n",
+              " Rating(user=126443, product=326, rating=4.19226143014788),\n",
+              " Rating(user=126443, product=844, rating=4.176850052221196),\n",
+              " Rating(user=126443, product=659, rating=4.144022301815534),\n",
+              " Rating(user=126443, product=341, rating=4.118683655867986),\n",
+              " Rating(user=126443, product=720, rating=4.0540810876237945),\n",
+              " Rating(user=126443, product=701, rating=4.053854493166524),\n",
+              " Rating(user=126443, product=214, rating=4.0418627080314),\n",
+              " Rating(user=126443, product=745, rating=4.037544339946727),\n",
+              " Rating(user=126443, product=32, rating=4.028476491870228)]"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# one example: recommned 10 items to userId 52862\n",
+        "\n",
+        "model.recommendProducts(126443, 10)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ptpSWSJULXUa"
       },
       "source": [
         "----"
@@ -341,25 +407,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3cergFhgqC3w",
-        "outputId": "4a55ba4b-bd2f-460c-a4cf-80388635bc70"
+        "outputId": "2414fc40-3e28-48ea-96e0-181a9b9693be"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "PythonRDD[287] at RDD at PythonRDD.scala:53\n"
+            "PythonRDD[289] at RDD at PythonRDD.scala:53\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(2, 242), (2, 469), (2, 891), (3, 32), (3, 173)]"
+              "[(1, 47), (1, 112), (1, 337), (2, 70), (2, 110)]"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -375,29 +441,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zve8qap9qC3w",
-        "outputId": "28ca8a80-1b41-485c-9a7b-81e706229ee6"
+        "outputId": "ac77fcec-68da-49e1-cd3e-91b571480096"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "MapPartitionsRDD[278] at mapPartitions at PythonMLLibAPI.scala:1344\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[Rating(user=65722, product=954, rating=2.4923833772943453),\n",
-              " Rating(user=65722, product=948, rating=2.8576633229903474),\n",
-              " Rating(user=65722, product=372, rating=1.3445525438204595),\n",
-              " Rating(user=65722, product=858, rating=2.95247743531596),\n",
-              " Rating(user=65722, product=110, rating=1.6773175328587708)]"
+              "[Rating(user=65722, product=515, rating=1.6422999522519517),\n",
+              " Rating(user=65722, product=949, rating=2.6059620166890283),\n",
+              " Rating(user=129434, product=912, rating=3.9893138882692036),\n",
+              " Rating(user=129434, product=665, rating=4.242397620069801),\n",
+              " Rating(user=91902, product=140, rating=2.8549149853674236)]"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -413,29 +479,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S59xKEsdqC3x",
-        "outputId": "c2bb5b35-6616-4b88-9565-9f366300a41f"
+        "outputId": "7f84f23f-680f-4127-9a21-c44a4bcfce61"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "PythonRDD[290] at RDD at PythonRDD.scala:53\n"
+            "PythonRDD[292] at RDD at PythonRDD.scala:53\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[((65722, 954), 2.4923833772943453),\n",
-              " ((65722, 948), 2.8576633229903474),\n",
-              " ((65722, 372), 1.3445525438204595),\n",
-              " ((65722, 858), 2.95247743531596),\n",
-              " ((65722, 110), 1.6773175328587708)]"
+              "[((65722, 515), 1.6422999522519517),\n",
+              " ((65722, 949), 2.6059620166890283),\n",
+              " ((129434, 912), 3.9893138882692036),\n",
+              " ((129434, 665), 4.242397620069801),\n",
+              " ((91902, 140), 2.8549149853674236)]"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -451,29 +517,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GHQWDzvqC3x",
-        "outputId": "3d4cca30-92cb-4469-cd6c-fcc1aef00269"
+        "outputId": "a9331d08-715e-4649-bc3b-6c5c8d43f9b7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "PythonRDD[292] at RDD at PythonRDD.scala:53\n"
+            "PythonRDD[294] at RDD at PythonRDD.scala:53\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[((3, 512), (2.0, 3.455849970312213)),\n",
-              " ((3, 593), (5.0, 4.321198629949171)),\n",
-              " ((4, 356), (4.0, 3.582186548595037)),\n",
-              " ((4, 594), (4.0, 2.5853824959762606)),\n",
-              " ((5, 150), (5.0, 4.7181450491088555))]"
+              "[((1, 47), (3.5, 3.997202225559832)),\n",
+              " ((1, 112), (3.5, 3.4209485245494218)),\n",
+              " ((2, 70), (5.0, 3.415139092526429)),\n",
+              " ((3, 260), (5.0, 4.911124741134522)),\n",
+              " ((3, 512), (2.0, 3.1283293439241255))]"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -483,6 +549,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -499,9 +568,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
